Fixed fade in transition for Features section

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 			<div class="group">
 				<h2>Get food fast &mdash; not fast food.</h2>
 				<p class="description-copy">
-					Hello, we’re Premium Food Delivery, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+					Hello, we’re Premium Food Delivery, your new food delivery service. We know you have a very busy schedule and no time to cook. So let us take care of that, we’re really good at it, we promise!
 				</p>
 			</div>
 						
-			<div class="group js--wp-form">
+			<div class="group js--wp-features">
 				<div class="col span_1_of_4 item-box">
 					<i class="ion-ios-infinite-outline feature-icon"></i>
 					<h3>Up to 365 days/year</h3>
